--- a/share/examples/include/README
+++ b/share/examples/include/README
@@ -3,7 +3,7 @@ Original RHEL 5 setrans.conf
 To use:
 cp setrans.conf /etc/selinux/mls/setrans.conf
 cp setrans.d/*  /etc/selinux/mls/setrans.d
-run_init /etc/init.d/mcstrans reload
+run_init /etc/init.d/mcstrans restart
 
 To test:
 /usr/share/mcstrans/util/mlstrans-test include.test
