jdn: really add Eamon's changes this time. I had checked out the wrong branch earlier.      add new urcsts.include example      update tests

--- a/share/examples/include/README
+++ b/share/examples/include/README
@@ -1,4 +1,4 @@
-Original RHEL 5 setrans.conf
+Original RHEL 5 setrans.conf pushed into setrans.d as include file
 
 To use:
 cp setrans.conf /etc/selinux/mls/setrans.conf
