--- a/share/examples/urcsts-via-include/README
+++ b/share/examples/urcsts-via-include/README
@@ -7,8 +7,8 @@ Simple handling of
 via include files
 
 To use:
-cp setrans.conf /etc/selinux/mls/
-cp secolor.conf /etc/selinux/mls/
+cp -L setrans.conf /etc/selinux/mls/
+cp -L secolor.conf /etc/selinux/mls/
 rm -f /etc/selinux/mls/setrans.d/*
 cp setrans.d/*  /etc/selinux/mls/setrans.d
 run_init /etc/init.d/mcstrans restart
