--- a/share/examples/urcsts/README
+++ b/share/examples/urcsts/README
@@ -12,3 +12,4 @@ run_init /etc/init.d/mcstrans restart
 
 To test:
 /usr/share/mcstrans/util/mlstrans-test urcsts.test
+/usr/share/mcstrans/util/mlscolor-test urcsts.color
